# op_fusion

./: .gitignore  CMakeLists.txt  PyRuntime.dir  README.md  add.tmp  alias  lenet.onnx  lenet.tmp  linear_func.tmp  resnet50-v1-12.tmp  run.sh  run_main_graph.py  test.sh  update_env.sh
catherine/: 1.txt  CMakeLists.txt  build.sh
catherine/cmake/: FindBLIS.cmake
catherine/example/: benchmarks.ipynb  res  test.cc  update_env.sh
catherine/example/Blis/: dgemm-matmul.mlir  log.mlir  makefile  simple-matmul.mlir
catherine/example/POC/: benchmark.ipynb  example.ipynb  graph-fusion.ipynb  loop-fusion.ipynb  makefile  omrun.cc  operator-fusion.ipynb  poc-run.mlir  poc-transform.mlir  poc.mlir  run.sh  test.mlir
catherine/example/POC/GPU/: 1.mlir  2.mlir  3.mlir  exec  exout.ll  exout.llvm  exout.s  matmul.mlir  wmma-matmul-f32.mlir
catherine/example/POC/auto/: gen_matmul_full_pipe.sh  gen_matmul_full_pipe_f16.sh  gen_matmul_naive.sh  matmul_opt_base.mlir  run_matmul_test.sh
catherine/example/POC/test/: 1.mlir  exec  exout.ll  exout.llvm  exout.s  help  iree-dump.mlir  iree-help.txt  matmul-affine.mlir  matmul-bufferize.mlir  matmul-tile.mlir  matmul.mlir  poc.mlir  run.sh  test.mlir
catherine/include/: CMakeLists.txt
catherine/include/Blis/: BlisDialect.h  BlisOps.td  CMakeLists.txt
catherine/lib/Blis/: BlisDialect.cpp  BlisOps.cpp  CMakeLists.txt
catherine/mlir/: LowerFromOnnx.cpp
catherine/opt/: CMakeLists.txt  blis-opt.cpp
catherine/src/: CMakeLists.txt  InitAllDialects.h  InitAllPasses.h
catherine/src/Conversion/: CMakeLists.txt  MatMulOptimize.cpp  bak
catherine/src/Conversion/KrnlToAffine/: CMakeLists.txt  KrnlMatMul.cpp
catherine/src/Conversion/ONNXToKrnl/: CMakeLists.txt  ONNXToKrnlLowering.cpp
catherine/src/Dialect/: CMakeLists.txt
catherine/src/Dialect/Blis/: BlisDialect.cpp  BlisDialect.h  BlisDialect.td  BlisOps.cpp  BlisOps.h  BlisOps.td  CMakeLists.txt
catherine/src/Dialect/HLS/: Attributes.td  CMakeLists.txt  HLS.cpp  HLS.h  HLS.td  Interfaces.td  ParamOps.td  PragmaOps.td  README.md  StructureOps.td  Visitor.h
catherine/src/Dialect/KateKrnl/: DIalect.h  Ops.h  Ops.td
catherine/src/Pass/: CMakeLists.txt  Passes.cpp  Passes.h  Passes.td
catherine/src/Tools/: CMakeLists.txt
catherine/src/Tools/opt/: CMakeLists.txt  blis-opt.cpp
catherine/src/Transform/: CMakeLists.txt  Estimator.cpp  Estimator.h  MatmulOpt  MatmulOpt.cpp  OptimizeMatmul.cpp  Passes.cpp  Passes.h  Passes.td  StaticParam.h
catherine/src/Transform/ONNX/: CMakeLists.txt  RewriteAnalyze.cpp  RewriteAnalyze.hpp  RewriteAnalyze.hpp.inc  RewriteAnalyze.td
catherine/src/Transform/fusion/: CMakeLists.txt  fusion.cpp  fusion.mlir  fusion_utils.cpp  fusion_utils.hpp  fusion_xla.cpp  graph_partition.hpp  test  test.cpp
catherine/src/Utils/: CMakeLists.txt  cycle_detector.cpp
catherine/test/: CMakeLists.txt  lit.cfg.py
catherine/test/Actions/: mlir-tblgen.sh
catherine/test/Dialect/Conversion/: ONNX2Krnl
catherine/test/Dialect/HLS/: test_affine_loop.mlir
catherine/tools/: CMakeLists.txt
catherine/tools/catherine-opt/: CMakeLists.txt  catherine-opt.cpp
catherine/tools/kate-translate/: CMakeLists.txt  kate-translate.cpp
config/: target-spec.ini
docs/: memcons.md  practice.md
mlir/: CMakeLists.txt
mlir/benchmark/: test.mlir
mlir/include/mlir/Transforms/: Passes.h  Passes.td
mlir/lib/Transforms/: CMakeLists.txt  MatmulOpt.cpp
model/: add.onnx  cbr-krnl.mlir  cbr-mlir.mlir  cbr-onnx.mlir  cbr.onnx  cbr.onnx.ext  cbr.onnx.mlir  gen-conv-bn-relu.py  linear_func.onnx
script/:  preprocess.py  build.sh  gen_linear_onnx.py  test.sh  time.sh  tvm_output copy.py  tvm_output.py
src/: CMakeLists.txt
src/CostModel/: CMakeLists.txt  TransformationImpedance.cpp  TransformationImpedance.hpp  Utils.hpp
src/Dialect/ONNX/: Rewrite.cpp
src/Pass/: Passes.hpp
src/Runtime/: OMInstrument.inc
src/Support/: CMakeLists.txt
src/Support/Log/: CMakeLists.txt  Log.cpp  Log.hpp
src/Transform/ONNX/: CMakeLists.txt  InstrumentONNXPass.cpp  ONNXOpTransformPass.cpp  OpFusion.cpp  OpFusion.hpp  OpFusionPass.cpp
src/Utils/: Utils.hpp  rand.h
test/: CMakeCache.txt
test/Actions/: mlir-tblgen.sh
test/Dialect/Conversion/: ONNX2IR
test/mlir/: CMakeLists.txt
test/numerical/: CMakeLists.txt
test/perf/: PerfConv_Benchmark_1667802394
